Fixed modal open left shift issue + improved tablet view

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ body,
   overscroll-behavior: contain;
   position: sticky;
   overflow-x: hidden;
+  padding: 0 !important;
 }
 
 .app {
